--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "repository": "github:youngelpaso/mcgill-frontend-basics",
   "license": "ISC",
   "dependencies": {
-    "susy": "^3.0.5"
+    "susy": "^3.0.5",
+    "node-sass": "git+https://github.com/sass/node-sass.git#v4.7.0"
   },
   "devDependencies": {
     "//": [
@@ -33,6 +34,7 @@
       "Need a test runner for running tests, TODO",
       "Need to provide a way to over-ride build/dev w/ a config file that specifies sass-in/out and port etc TODO, this means scripts dir and dev/build/test/scripts"
     ],
-    "node-sass": "git+https://github.com/sass/node-sass.git#v4.7.0"
+    "mocha": "^5.2.0",
+    "sass-true": "^4.0.0"
   }
 }
