--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "watch": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle -w $npm_package_config_sassIn -o $npm_package_config_sassOut",
     "build": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
-    "dev": "echo 'this should build a style guide HTML page and launch a dev server and serve the style guide along w/ a watch process for node-sass' &&serve .",
-    "test": "./node_modules/mocha/bin/mocha test/susy-test.js"
+    "dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run watch",
+    "test": "./node_modules/mocha/bin/mocha test/susy-test.js",
+    "build:styleguide": "./pug-build-test.js"
   },
   "config": {
-    "devPort": "8080",
+    "devPort": "3000",
     "sassOut": "css",
     "sassIn": "sass",
     "prodOutputStyle": "compressed",
@@ -40,6 +41,6 @@
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "sass-true": "^4.0.0",
-    "serve": "^8.2.0"
+    "serve": "^9.0.0"
   }
 }
