--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
     "dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run watch",
     "test": "./node_modules/mocha/bin/mocha test/susy-test.js",
-    "build:styleguide": "./pug-build-test.js"
+    "build:styleguide": "node ./pug-build-test.js"
   },
   "config": {
     "devPort": "3000",
     "sassOut": "css",
     "sassIn": "sass",
     "prodOutputStyle": "compressed",
-    "devOutputStyle": "expanded"
+    "devOutputStyle": "expanded",
+    "componentsDir": "components"
   },
   "directories": {
     "test": "./test"
