--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
     "dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run watch",
     "test": "./node_modules/mocha/bin/mocha test/susy-test.js",
-    "build:styleguide": "node ./pug-build-test.js"
+    "build:styleguide": "node ./styleguide/styleguide-build.js"
   },
   "config": {
     "devPort": "3000",
@@ -15,7 +15,7 @@
     "sassIn": "sass",
     "prodOutputStyle": "compressed",
     "devOutputStyle": "expanded",
-    "componentsDir": "components"
+    "componentsDir": "styleguide/components"
   },
   "directories": {
     "test": "./test"
