--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
     "dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run watch",
     "test": "./node_modules/mocha/bin/mocha test/susy-test.js",
-    "build:styleguide": "node ./styleguide/styleguide-build.js"
+    "build:styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html"
   },
   "config": {
     "devPort": "3000",
