--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "description": "A package that manages McGill frontend dependencies and some configuration and build steps.",
   "scripts": {
-    "watch": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle -w $npm_package_config_sassIn -o $npm_package_config_sassOut",
-    "build": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
-    "dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run watch",
+    "old-watch": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle -w $npm_package_config_sassIn -o $npm_package_config_sassOut",
+    "build:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
+    "old-dev": "npm run build && serve -n -p $npm_package_config_devPort & npm run old-watch",
+    "dev:serve": "serve -n -p $npm_package_config_devPort",
     "test": "./node_modules/mocha/bin/mocha test/susy-test.js",
-    "build:styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html"
+    "build:styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html && cp css/styleguide.css styleguide/css/styleguide.css",
+    "dev": "npm run dev:serve & npm-watch dev:builds",
+    "dev:builds": "npm run build:sass && npm run build:styleguide"
+  },
+  "watch": {
+    "dev:builds": {
+      "patterns": ["styleguide/components", "sass"],
+      "extensions": "html,scss,js",
+      "quiet": false
+    }
   },
   "config": {
     "devPort": "3000",
@@ -34,6 +44,7 @@
   "devDependencies": {
     "glob": "^7.1.2",
     "mocha": "^5.2.0",
+    "npm-watch": "^0.3.0",
     "pug": "^2.0.3",
     "sass-true": "^4.0.0",
     "serve": "^9.0.0"
