simplified watch config - watch root for any change, but ignore output dir (styleguide) and inessential ones, like test

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "watch": {
     "dev:builds": {
       "patterns": [
-        "components",
-        "sass"
+        "./"
+      ],
+      "ignore": [
+        "styleguide",
+        "test"
       ],
       "extensions": "html,scss,js",
       "quiet": false
