--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
     "prod:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
-    "dev:serve": "serve -n -p $npm_package_config_devPort",
+    "dev:serve": "serve -n -p $npm_package_config_devPort ./styleguide",
     "dev:builds": "npm run dev:sass && npm run styleguide",
     "dev": "npm run dev:serve & npm-watch dev:builds",
     "styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html && cp css/styleguide.css styleguide/css/styleguide.css",
