--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "version": "1.0.0",
   "description": "A package that manages McGill frontend dependencies and some configuration and build steps.",
   "scripts": {
-    "dev:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
-    "prod:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle $npm_package_config_sassIn -o $npm_package_config_sassOut",
+    "dev:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_devOutputStyle ./src/$npm_package_config_sassIn -o ./build/$npm_package_config_sassOut",
+    "prod:sass": "node-sass --include-path node_modules/susy/sass -r --output-style=$npm_package_config_prodOutputStyle ./src/$npm_package_config_sassIn -o ./build/$npm_package_config_sassOut",
     "dev:serve": "serve -n -p $npm_package_config_devPort ./styleguide",
     "dev:builds": "npm run dev:sass && npm run styleguide",
     "dev": "npm run dev:serve & npm-watch dev:builds",
-    "styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html && cp css/styleguide.css styleguide/css/styleguide.css",
+    "styleguide": "node ./styleguide/styleguide-build.js > ./styleguide/index.html && cp build/css styleguide/css",
     "test": "./node_modules/mocha/bin/mocha test/susy-test.js"
   },
   "watch": {
     "dev:builds": {
       "patterns": [
-        "./"
+        "./src"
       ],
       "ignore": [
         "styleguide",
+        "build",
         "test"
       ],
       "extensions": "html,scss,js",
